basic game play created

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Retro Word Guess Game</h1>
     <div class="guess-this-word"></div>
-    <div class="letter-guessed"></div>
+    <div class="current-guess"></div>
     <div class="letters-guessed"></div>
     <div class="guesses-left"></div>
     <div class="score"></div>
