add output to view

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
   </head>
   <body>
     <h1>Retro Word Guess Game</h1>
-    <div class="guess-this-word"></div>
-    <div class="current-guess"></div>
-    <div class="letters-guessed"></div>
-    <div class="guesses-left"></div>
-    <div class="score"></div>
+    <p>Guess these computer related terms</p>
+    <div id="score"></div>
+
+    <div id="guess-this-word"></div>
+    <div id="current-guess"></div>
+    <div id="letters-guessed"></div>
+    <div id="remaining-guesses"></div>
     <script src="script.js"></script>
   </body>
 </html>
